--- a/style.css
+++ b/style.css
@@ -208,12 +208,65 @@ footer a{
         display: none;
     }
 
+    header img {
+        display: block;
+    }
+
+    .btn-close {
+        color: white !important;
+        font-size: 40px;
+    }
+
     #offcanvasNavbar {
-        background-color: red;
+        background-image: linear-gradient(to right,#fe866e,#fe5e60);
+        width: 100%;
+        border-bottom-left-radius: 600px;
+    }
+
+    .offcanvas-header {
+        padding: 80px 80px 0 80px;
     }
 
     .offcanvas-body {
         background-color: white;
-        margin: 20px;
+        margin: 80px;
+        text-align: center;
+        font-size: 60px !important;
+        border-radius: 20px;
+    }
+
+    .offcanvas-body
+    ,.offcanvas-body li a {
+        color:#3a3b59 !important;
+    }
+
+    #nav-buttons {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        border-top: 1px solid lightgrey; 
+        align-items: center;
+        justify-content: space-around;
+    }
+    #nav-buttons a{
+        margin: 50px;
+    }
+    
+    #signup {
+        background-image: linear-gradient(to right,#fe866e,#fe5e60);
+        border-radius: 100px;
+        color: white;
+        font-weight: bold;
+        border: none;
+        font-size: 60px;
+        padding: 10px;
+        width: 500px;
+    }
+
+    header .dropdown-menu {
+        background-color: rgb(242, 239, 239) !important;
+        text-align: center;
+        font-size: 40px;
+        padding: 50px;
     }
 }
