--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ footer a{
         display: none;
     }
 
-    header img {
+    header img, #section-1 img {
         display: block;
     }
 
@@ -302,6 +302,41 @@ footer a{
         font-size: 2.5em;
         width: 300px;
         margin-top: 100px;
+    }
+
+    #section-1-title {
+        text-align: center;
+        color: #3a3b59;
+        margin-top: 0;
+        font-size: 70px;
+    }
+
+    #section-1 {
+        display: flex;
+        flex-direction: column-reverse;
+        height: 2200px;
+        text-align:  center;
+        justify-content: center;
+    }
+
+   #section-1-img {
+        display: block;
+        right: 0;
+        position: static;
+        width: 100%;
+   }
+
+   #section-1-body-1 {
+        width: 100%;
+        font-size: 2.5em;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+    }
+
+    #section-1-body-1 h3{
+        width: 100%;
+        font-size: 50px;
     }
 
 }
