--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ footer a{
         display: none;
     }
 
-    header img, #section-1 img {
+    header img, #section-1 img{
         display: block;
     }
 
@@ -304,6 +304,8 @@ footer a{
         margin-top: 100px;
     }
 
+    /* Section 1 */
+
     #section-1-title {
         text-align: center;
         color: #3a3b59;
@@ -313,18 +315,20 @@ footer a{
 
     #section-1 {
         display: flex;
-        flex-direction: column-reverse;
-        height: 2200px;
+        flex-direction: column;
         text-align:  center;
         justify-content: center;
     }
 
-   #section-1-img {
-        display: block;
-        right: 0;
-        position: static;
-        width: 100%;
+   #section-1-img-mobile {
+        display: block !important;
+        min-width: 800px;
+        margin-top: 300px;
    }
+
+   #section-1-img {
+        display: none !important;
+    }
 
    #section-1-body-1 {
         width: 100%;
@@ -339,4 +343,36 @@ footer a{
         font-size: 50px;
     }
 
+    /* Section 2 */
+
+    #section-2 {
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #section-2-img-mobile {
+        display: block !important;
+        height: 60%;
+        z-index: 2;
+    }
+
+    #section-2-body-1 {
+        margin-top: 1500px;
+        height: 1500px;
+        position: absolute;
+    }
+
+    #section-2-body-1-content-1 h1 {
+        font-size: 80px;
+    }
+
+    #section-2-body-1-content-1 p {
+        font-size: 2.5em;
+    }
+
+    /* Section 3 */
+    /* Footer */
 }
