--- a/style.css
+++ b/style.css
@@ -363,6 +363,7 @@ footer a{
         margin-top: 1500px;
         height: 1500px;
         position: absolute;
+        text-align: center;
     }
 
     #section-2-body-1-content-1 h1 {
