--- a/style.css
+++ b/style.css
@@ -111,6 +111,8 @@ nav li {
 #section-1-body-1-content-1 {
     display: inline;
     width: 600px;
+    font-size: 16px;
+
 }
 
 /* Section 2*/
@@ -145,6 +147,8 @@ nav li {
 #section-2-body-1-content-1 {
     display: inline;
     width: 600px;
+    font-size: 16px;
+
 }
 
 #section-3 {
@@ -172,6 +176,7 @@ nav li {
 #section-3-body-1-content-1 {
     display: inline;
     width: 600px;
+    font-size: 16px;
 }
 
 footer {
@@ -203,14 +208,11 @@ footer a{
     text-decoration: none;
 }
 
-@media only screen and (max-width: 1000px){
-    img {
-        display: none;
-    }
+.footer-titles {
+    color: white;
+}
 
-    header img, #section-1 img{
-        display: block;
-    }
+@media only screen and (max-width: 1000px){
 
     /* Navigation Bar */
 
@@ -345,6 +347,10 @@ footer a{
         margin-top: 50px;
     }
 
+    #section-1-body-1 p{
+        font-size: 50px;
+    }
+
     /* Section 2 */
 
     #section-2 {
@@ -361,15 +367,18 @@ footer a{
         display: block !important;
         z-index: 2;
         position: absolute;
-        height: 50%;
+        width: 80%;
+    }
+    #section-2-img {
+        display: none !important;
     }
 
     #section-2-body-1 {
-        height: 80vh;
+        height: auto;
         padding: 0;
         display: block;
-        padding: 700px 100px 400px;
-        margin-top: 50%;
+        padding: 600px 100px 400px;
+        margin-top: 30%;
     }
 
     #section-2-body-1-content-1 {
@@ -422,4 +431,27 @@ footer a{
     }
 
     /* Footer */
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        height: auto;
+        border-top-right-radius: 200px;
+        padding-top: 300px;
+        padding-bottom: 300px;
+    }
+
+    footer a{
+        font-size: 50px;
+    }
+
+    .footer-titles {
+        margin-top: 100px;
+        color: white;
+    }
+
+    #footer-body-1 {
+        flex-direction: column;
+    }
 }
